@startuml MCD_ThreatLab
!theme plain
title Modèle Conceptuel de Données (MCD) - ThreatLab

skinparam backgroundColor #FFFFFF
skinparam class {
  BackgroundColor #E8F4FF
  BorderColor black
  ArrowColor #333
}
skinparam linetype ortho

entity "users" as users {
  * id : INT <<PK>>
  --
  * username : VARCHAR
  * password_hash : VARCHAR
  otp_secret : VARCHAR
  otp_active : BOOLEAN
  created_at : DATETIME
}

entity "log_attempt_account" as log_attempt {
  * id : INT <<PK>>
  --
  * username : VARCHAR
  ip_address : VARCHAR
  status : ENUM
  timestamp : DATETIME
}

entity "honey_agents" as agents {
  * agent_id : INT <<PK>>
  --
  * name : VARCHAR
  * ip : VARCHAR
  country : VARCHAR
  * service_type : VARCHAR
  banner : TEXT
  secret_token_sha256 : VARCHAR
  created_at : DATETIME
}

entity "attack_logs" as attacks {
  * id : INT <<PK>>
  --
  # agent_id : INT <<FK>>
  # ip_source : VARCHAR <<FK>>
  * service : VARCHAR
  port : INT
  username_attempted : VARCHAR
  password_attempted : VARCHAR
  payload : TEXT
  malware_hash : VARCHAR
  country : VARCHAR
  timestamp : DATETIME
}

entity "malicious_ips" as ips {
  * ip : VARCHAR <<PK>>
  --
  reputation_score : INT
  classification : VARCHAR
  country : VARCHAR
  first_seen : DATETIME
  last_seen : DATETIME
  total_attacks : INT
}

entity "ip_agent_relations" as ip_agent {
  * # ip : VARCHAR <<FK>>
  * # agent_id : INT <<FK>>
  --
  report_count : INT
  first_seen : DATETIME
  last_seen : DATETIME
}

entity "ip_service_attacks" as ip_service {
  * # ip : VARCHAR <<FK>>
  * service : VARCHAR
  --
  attack_count : INT
  last_attack : DATETIME
}

entity "compromised_credentials" as creds {
  * id : INT <<PK>>
  --
  * username : VARCHAR
  * password : VARCHAR
  service : VARCHAR
  attempt_count : INT
  first_seen : DATETIME
}

entity "password_attempted" as pwd_tried {
  * id : INT <<PK>>
  --
  password : VARCHAR
  count : INT
}

entity "username_viewed" as usr_tried {
  * id : INT <<PK>>
  --
  username : VARCHAR
  count : INT
}

entity "api_keys" as api {
  * id : INT <<PK>>
  --
  * name : VARCHAR
  * integration : VARCHAR
  api_key : TEXT
  url : VARCHAR
  created_at : DATETIME
  updated_at : DATETIME
}

users ||--o{ log_attempt : "tente\nde se connecter"
agents ||--o{ attacks : "reçoit"
ips ||--o{ attacks : "origine"
ips }o--o{ agents : "ip_agent_relations"
ips ||--o{ ip_service : "attaque"
attacks ||--o{ creds : "collecte"

@enduml
